objects/LMS_Product_Line_Keys__c.object
<CustomObject>
    <fields>
        <fullName>AssignedDefaultValueOnDev__c</fullName>
        <label>AssignedDefaultValueOnDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedRestrictSizeOnDev__c</fullName>
        <label>AssignedRestrictSizeOnDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultValueOnDev__c</fullName>
        <label>DefaultValueOnDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayOnDev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeatureOpted__c</fullName>
        <formula>AND(License_Category__c==&apos;Feature&apos;,DefaultValueOnDev__c==1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FeatureOpted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Category__c</fullName>
        <formula>TEXT(License_Key__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Keys</label>
        <referenceTo>LMS_License_Keys__c</referenceTo>
        <relationshipLabel>Product Line Keys</relationshipLabel>
        <relationshipName>Product_Line_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>LMS_ProductLine__c</referenceTo>
        <relationshipLabel>Product Line Keys</relationshipLabel>
        <relationshipName>Product_Line_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RestrictSizeOnDev__c</fullName>
        <label>RestrictSizeOnDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Assigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Line Keys</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>DisplayOnDev__c</columns>
        <columns>License_Category__c</columns>
        <columns>License_Key__c</columns>
        <columns>ProductLine__c</columns>
        <columns>ShowAssigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License_Key__c</field>
            <operation>equals</operation>
            <value>I3_LICENSE_BASIC_STATION</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Product_Line_Keys</fullName>
        <columns>NAME</columns>
        <columns>ProductLine__c</columns>
        <columns>License_Key__c</columns>
        <columns>License_Category__c</columns>
        <columns>AssignedDefaultValueOnDev__c</columns>
        <columns>AssignedRestrictSizeOnDev__c</columns>
        <columns>DefaultValueOnDev__c</columns>
        <columns>DisplayOnDev__c</columns>
        <columns>FeatureOpted__c</columns>
        <columns>RestrictSizeOnDev__c</columns>
        <columns>ShowAssigned__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Line Keys</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Key-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>